<resources>
    <string name="app_name">BookApp</string>

    <!-- botones, editText, etc -->
    <string name="acceder">ACCEDER</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="aceptar_donacion">ACEPTAR DONACION</string>
    <string name="aceptar_peticion">ACEPTAR PETICION</string>
    <string name="aceptar_todas">ACEPTAR TODAS</string>
    <string name="aceptar_todas_donaciones">ACEPTAR TODAS LAS DONACIONES</string>
    <string name="aceptar_todas_peticiones">ACEPTAR TODAS LAS PETICIONES</string>
    <string name="anadir">AÑADIR</string>
    <string name="anadir_donacion">QUIERO DONAR UN LIBRO</string>
    <string name="anadir_foto">AÑADIR FOTO DE PERFIL</string>
    <string name="anadir_libro">AÑADIR LIBRO</string>
    <string name="anadir_portada">AÑADIR PORTADA</string>
    <string name="anadir_portada_defecto">PORTADA POR DEFECTO</string>
    <string name="anadir_portada_galeria">DESDE GALERIA</string>
    <string name="apellido">Apellido</string>
    <string name="apellido_mayus">APELLIDO: </string>
    <string name="asignatura">ASIGNATURA</string>
    <string name="buscar_escaneando">ESCANEAR CODIGO</string>
    <string name="clase">CLASE</string>
    <string name="codigo">CODIGO</string>
    <string name="codigo_barras">CODIGO DE BARRAS</string>
    <string name="curso">CURSO</string>
    <string name="cerrar_sesion">CERRAR SESION</string>
    <string name="datos_personales">MIS DATOS PERSONALES</string>
    <string name="datos_personales_scan">DATOS PERSONALES USUARIO ESCANEADO</string>
    <string name="decidir">DECIDIR</string>
    <string name="deseo_donar">Si desea donar un libro, rellene los siguientes campos:</string>
    <string name="deshacer_reserva">DESHACER RESERVA</string>
    <string name="detalles_libro_scan">DETALLES LIBRO ESCANEADO</string>
    <string name="devolver_libro">DEVOLVER LIBRO</string>
    <string name="donaciones">DONACIONES</string>
    <string name="donaciones_aprobar">DONACIONES POR APROBAR</string>
    <string name="donacion_seleccionada">DONACION SELECCIONADA</string>
    <string name="donar">DONAR</string>
    <string name="donado">DONADO POR</string>
    <string name="editorial">EDITORIAL</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="eliminar_cuenta">ELIMINAR CUENTA</string>
    <string name="eliminar_libro">ELIMINAR LIBRO</string>
    <string name="email">Email</string>
    <string name="email_mayus">EMAIL: </string>
    <string name="enviar_email">ENVIAR EMAIL</string>
    <string name="error_email">El email introducido no es válido</string>
    <string name="error_pass">LA CONTRASEÑA DEBE CONTENER AL MENOS 8 CARACTERES CON UNA LETRA MINÚSCULA, UNA MAYUSCULA, UN NÚMERO Y UN CARACTER ESPECIAL.</string>
    <string name="error_pass2">La contraseña tiene que ser igual en los dos campos, intentelo de nuevo.</string>
    <string name="escanea">ESCANEA ALGO…</string>
    <string name="estado">ESTADO</string>
    <string name="estado_pendientes">ESTADO DE LAS DONACIONES Y PETICIONES PENDIENTES</string>
    <string name="fecha">FECHA</string>
    <string name="fecha_devolucion_anadir">AÑADIR FECHA DEVOLUCION</string>
    <string name="fecha_devolucion">FECHA DEVOLUCION</string>
    <string name="fecha_donacion">FECHA DONACION</string>
    <string name="fecha_prestamo">FECHA PRESTAMO</string>
    <string name="fecha_reserva">FECHA RESERVA</string>
    <string name="fechas">FECHA PRESTAMO \n DEVOLUCION</string>
    <string name="foto_defecto_hombre">FOTO POR DEFECTO HOMBRE</string>
    <string name="foto_defecto_mujer">FOTO POR DEFECTO MUJER</string>
    <string name="foto_eleccion">ELEGIR FOTO DE GALERIA</string>
    <string name="foto_perfil">Foto de perfil</string>
    <string name="icono_app">icono principal app</string>
    <string name="imagen_portada">Imagen de la portada del libro</string>
    <string name="imagen_portada_donar"> Imagen de la portada del libro que quiere donar</string>
    <string name="info_usuario">INFORMACIÓN USUARIO</string>
    <string name="introduzca_email">Introduzca el email al que le enviaremos la nueva contraseña.</string>
    <string name="ir_escaner">IR A ESCANER</string>
    <string name="hacer_admin">HACER ADMINISTRADOR</string>
    <string name="libro">LIBRO</string>
    <string name="libro_seleccionado">LIBRO SELECCIONADO</string>
    <string name="libros_disponibles">LIBROS DISPONIBLES</string>
    <string name="listado_cursos">LISTADO POR CURSOS</string>
    <string name="lista_libros">LISTA DE LIBROS</string>
    <string name="lista_users">LISTA USUARIOS</string>
    <string name="listar">LISTAR</string>
    <string name="listar_clases">LISTAR POR CLASES</string>
    <string name="listar_todos">LISTAR TODOS</string>
    <string name="menu">MENU</string>
    <string name="menu_principal">MENU PRINCIPAL</string>
    <string name="menu_admin">MENU ADMINISTRADORES</string>
    <string name="mis_datos">MIS DATOS</string>
    <string name="modificar">MODIFICAR</string>
    <string name="modificar_datos">MODIFICAR DATOS</string>
    <string name="modificar_foto">MODIFICAR FOTO DE PERFIL</string>
    <string name="modo_admin">CAMBIAR A  MODO ADMINISTRADOR</string>
    <string name="modo_usuarios">CAMBIAR A \n MODO USUARIOS</string>
    <string name="mostrar">MOSTRAR</string>
    <string name="mostrar_libros_disp">MOSTRAR LIBROS DISPONIBLES</string>
    <string name="mostrar_lista">MOSTRAR LISTA</string>
    <string name="name_app"> BOOK APP!</string>
    <string name="no_libros_disponibles">NO HAY LIBROS DISPONIBLES PARA RESERVAR DEL CURSO SELECCIONADO</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_mayus">NOMBRE: </string>
    <string name="nombre_completo">NOMBRE Y APELLIDOS</string>
    <string name="nueva_donacion">NUEVA DONACION</string>
    <string name="numero_donaciones">Nº DON.</string>
    <string name="numero_peticiones">Nº PET.</string>
    <string name="olvide">OLVIDE MI CONTRASEÑA</string>
    <string name="ordenar">ORDENAR</string>
    <string name="ordenar_por">ORDENAR POR: </string>
    <string name="password">Contraseña</string>
    <string name="peticiones">MIS PETICIONES</string>
    <string name="peticiones_pendientes">PETICIONES PENDIENTES</string>
    <string name="peticion_seleccionada">PETICION SELECCIONADA</string>
    <string name="portada">PORTADA</string>
    <string name="prestado">PRESTADO A </string>
    <string name="prestamos">MIS PRESTAMOS</string>
    <string name="prestamos_actuales">PRESTAMOS ACTUALES</string>
    <string name="prestamo_seleccionado">PRESTAMO SELECCIONADO</string>
    <string name="recuperar_contraseña">RECUPERAR CONTRASEÑA</string>
    <string name="registro">SOY NUEVO, QUIERO REGISTRARME</string>
    <string name="rechazar">RECHAZAR</string>
    <string name="rechazar_donacion">RECHAZAR DONACION</string>
    <string name="rechazar_peticion">RECHAZAR PETICION</string>
    <string name="rellenar">RELLENAR</string>
    <string name="rellenar_campos">RELLENAR CAMPOS</string>
    <string name="registrar">REGISTRAR</string>
    <string name="registrar_cuenta">Registrar Cuenta</string>
    <string name="repetir_contra">Repita su contraseña</string>
    <string name="reservado">RESERVADO POR</string>
    <string name="reservar">RESERVAR</string>
    <string name="reset_password">Se le enviará un correo con la nueva contraseña al email con el que se registró.</string>
    <string name="seleccionar">SELECCIONAR</string>
    <string name="seleccionar_portada">SELECCIONAR PORTADA</string>
    <string name="seleccionar_perfil">SELECCIONAR FOTO DE PERFIL</string>
    <string name="tipo">TIPO</string>
    <string name="usuario">USUARIO</string>
    <string name="volver_inicial">Volver a la pantalla inicial</string>
    <string name="volver_lista">Volver a la lista</string>
    <string name="volver_menu">Volver al menu</string>

    <string name="campos_libro">ASIGNATURA \t\t CLASE  CURSO \t\t EDITORIAL</string>

    <!-- clases -->
    <string name="primero">PRIMERO</string>
    <string name="segundo">SEGUNDO</string>
    <string name="tercero">TERCERO</string>
    <string name="cuarto">CUARTO</string>
    <string name="quinto">QUINTO</string>
    <string name="sexto">SEXTO</string>

    <!-- cursos -->
    <string name="primaria">PRIMARIA</string>
    <string name="eso">ESO</string>
    <string name="bachillerato">BACHILLERATO</string>

    <!-- EDITORIALES -->
    <string name="anaya">ANAYA</string>
    <string name="sm">SM</string>

    <!-- ASIGNATURAS-->
    <string name="matematicas">MATEMATICAS</string>
    <string name="lengua">LENGUA</string>
    <string name="biologia">BIOLOGIA</string>
    <string name="sociales">SOCIALES</string>


    <string name="prefs_file">com.marta.bookapp.PREFERENCE_FILE_KEY</string>

    <string name="invalid_mail">Introduzca un email que sea válido</string>
    <string name="invalid_password">Introduzca una contraseña de más de 6 dígitos</string>

    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

</resources>