<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UsuarioScanActivity">


    <TextView
        android:id="@+id/tituloTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/datos_personales_scan"
        android:textSize="20sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_margin="8dp"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/nombreET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:autofillHints="name"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textSize="20sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/apellido"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/apellidoET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:autofillHints="apellido"
        android:hint="@string/apellido"
        android:inputType="text"
        android:textSize="20sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/email"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/correoTV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:textSize="20sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <Button
        android:id="@+id/adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hacer_admin"
        android:layout_gravity="center"
        style="?android:attr/buttonBarButtonStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">

        <Button
            android:id="@+id/buttonmodificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/modificar" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volver_menu"
            android:layout_margin="20dp"/>


    </LinearLayout>




</LinearLayout>